# Abaad-3D-Print-Manager-ERP

./: .gitignore  CHANGELOG.md  FileTree.md  Launch_App.bat  Makefile  README.md  abaad-erp.desktop  abaad-erp.spec  launch.sh  main.py  pyproject.toml
.github/workflows/: ci.yml
api/: deps.py  main.py
api/routers/: auth.py  customers.py  dashboard.py  expenses.py  failures.py  filament.py  orders.py  printers.py  settings.py
data/: abaad_v5.db
docs/: CLAUDE.md  CONTRIBUTING.md  DEVELOPER.md  MASTER-PLAN.md  README.md  USER-GUIDE.md
docs/phases/: PHASE-0-PROMPT.md  PHASE-0-REPORT.md  PHASE-1-PROMPT.md  PHASE-10-PROMPT.md  PHASE-2-PROMPT.md  PHASE-3-PROMPT.md  PHASE-4-PROMPT.md  PHASE-4.5-PROMPT.md  PHASE-5-PROMPT.md  PHASE-6-PROMPT.md  PHASE-7-PROMPT.md  PHASE-7-REPORT.md  PHASE-9-PROMPT.md
docs/skills/: ABAAD-SKILL.md
docs/ui-design/: ABAAD-DESIGN-BRIEF.md
frontend/: README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
scripts/: install.py  install_linux.sh  install_windows.bat  run_bundle_linux.sh
src/auth/: auth_manager.py  permissions.py
src/core/: config.py  database.py  models.py
src/services/: cura_service.py  customer_service.py  finance_service.py  inventory_service.py  order_service.py  pdf_service.py  printer_service.py
src/ui/: app.py  context_menu.py  theme.py  widgets.py
src/utils/: helpers.py
tests/: test_dashboard_tab.py  test_database.py  test_finance_service.py  test_inventory_service.py  test_models.py  test_order_service.py  test_pdf_service.py  test_phase2.py  test_printer_service.py
(+49 files in other folders)
